<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textLastSync"
        android:textColor="@color/colorWelcomeText"
        android:fontFamily="@font/poppins"
        android:textFontWeight="400"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp"
        tools:ignore="RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textNoSync"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins"
        android:textFontWeight="800"
        android:textSize="26sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry,UnusedAttribute" />

    <ProgressBar
        android:id="@+id/syncSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        />

    <Button
        android:id="@+id/syncButton"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_solid"
        android:text="@string/actionSyncNow"
        android:textColor="@color/colorPrimaryButtonText"
        android:textFontWeight="700"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_bordered"
        android:text="@string/actionSignOut"
        android:textColor="@color/colorBorderedButtonText"
        android:textFontWeight="700"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        tools:ignore="UnusedAttribute" />

</LinearLayout>
