<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".scenes.home.fragments.ConfirmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:paddingStart="25dp"
            android:paddingEnd="10dp"
            android:text="@string/confirm_appointment"
            android:textColor="@color/colorBlue"
           android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="UnusedAttribute" />

        <com.cornetelevated.drcornet.android.kotlin.scenes.home.views.AppointmentDetailsView
            android:id="@+id/detailsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/instruction_text"
            />

        <ProgressBar
            android:id="@+id/confirmProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/acceptCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/accept_terms"
            />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/solid_button"
            android:fontFamily="@font/poppins"
            android:text="Confirm Booking"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textFontWeight="400"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_border"
            android:fontFamily="@font/poppins"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorRed"
            android:textColorHighlight="@color/colorRed"
            android:textColorLink="@color/colorRed"
            android:textFontWeight="400"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</ScrollView>